--- a/show.html
+++ b/show.html
@@ -40,7 +40,9 @@
   <form method="GET">
     <input type="hidden" name="b" value="{{ boardID }}">
     <label for="fmd">Filter: major updates after</label>
-    <input type="date" name="fmd" id="fmd" value="{{ fmd }}">
+    <input type="date" name="fmd" id="fmd" value="{{ fmd }}"><br>
+    <label for="fd">Filter: any updates after</label>
+    <input type="date" name="fd" id="fd" value="{{ fd }}"><br>
     <input type="submit" />
   </form>
 </script>
