--- a/show.html
+++ b/show.html
@@ -70,21 +70,29 @@
 </script>
 
 <script id="template-lists" type="x-tmpl-mustache">
+  {{ ^brief }}
   <hr>
+  {{ /brief }}
   <ol class="lists">
     {{ ^lists }}
       <li>No cards matching filters</li>
     {{ /lists }}
     {{ #lists.length }}
+     {{ ^brief }}
       <li>
         <button type="button" class="btn btn-default btn-sm printable" data-listid="ALL">Print cards from all columns</button>
       </li>
+     {{ /brief }}
     {{ /lists.length }}
     {{ #lists }}
       <li>
+        {{ ^brief }}
         <hr>
+        {{ /brief }}
         <h3>{{ name }}</h3>
+        {{ ^brief }}
         <button type="button" class="btn btn-default btn-sm printable" data-listid="{{ id }}">Print</button>
+        {{ /brief }}
         <ol>
         {{ #cards }}
           <li>
