Link to filtered epic view from summary view

--- a/show.html
+++ b/show.html
@@ -222,7 +222,7 @@
   {{ #features }}
   <div class="container">
 
-    <span class="label-marker label-marker-{{ color }}"></span>{{ name }} ({{ cardCount }} cards)
+    <span class="label-marker label-marker-{{ color }}"></span>{{ name }} (<a href="?b={{ boardId }}&e={{ id }}">{{ cardCount }} cards</a>)
     <table class="table table-condensed">
     {{ #lists }}
       <tr>
